# grad_traj_optimizer_ros2

./: CMakeLists.txt  README.md  package.xml
include/: configs.h  display.h  grad_traj_optimizer.h
launch/: text_input.launch.py  traj_rviz.launch.py
logs/: A1.txt
rviz/: traj.rviz
scripts/: sendPath.py
src/: example_text_input.cpp  my_node.cpp  qp_generator.cpp
